// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput /> should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="password-input"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter password
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isDisabled={false}
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            autoCapitalize="none"
            autoFocus={false}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="password-field-1-input-2"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            returnKeyType="done"
            secureTextEntry={true}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 8,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            trailingInteractionElement={
              <ForwardRef(_IconButton)
                accessibilityLabel="Show password"
                icon={[Function]}
                onClick={[Function]}
                size="medium"
              />
            }
            valueComponentType="text"
          />
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              alignItems="center"
              alignSelf="center"
              data-blade-component="base-box"
              display="flex"
              flexDirection="row"
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                alignItems="stretch"
                alignSelf="stretch"
                data-blade-component="base-box"
                display="flex"
                style={
                  [
                    {
                      "alignItems": "stretch",
                      "alignSelf": "stretch",
                      "display": "flex",
                      "paddingRight": 12,
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="Show password"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  emphasis="intense"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignSelf": "center",
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    accessibilityElementsHidden={true}
                    align="xMidYMid"
                    bbHeight="16px"
                    bbWidth="16px"
                    data-blade-component="icon"
                    fill="none"
                    focusable={false}
                    height="16px"
                    importantForAccessibility="no-hide-descendants"
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        [
                          {},
                        ],
                        {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width="16px"
                  >
                    <RNSVGGroup
                      fill={null}
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        clipRule={0}
                        d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                        fill={
                          {
                            "payload": 4285959847,
                            "type": 0,
                          }
                        }
                        fillRule={0}
                        propList={
                          [
                            "fill",
                            "fillRule",
                          ]
                        }
                      />
                      <RNSVGPath
                        clipRule={0}
                        d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                        fill={
                          {
                            "payload": 4285959847,
                            "type": 0,
                          }
                        }
                        fillRule={0}
                        propList={
                          [
                            "fill",
                            "fillRule",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<PasswordInput /> should render large size 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="password-input"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={100}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter password
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isDisabled={false}
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="large"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            autoCapitalize="none"
            autoFocus={false}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="password-field-13-input-14"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            returnKeyType="done"
            secureTextEntry={true}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 48,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 48,
                  "paddingBottom": 12,
                  "paddingLeft": 12,
                  "paddingRight": 8,
                  "paddingTop": 12,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            trailingInteractionElement={
              <ForwardRef(_IconButton)
                accessibilityLabel="Show password"
                icon={[Function]}
                onClick={[Function]}
                size="medium"
              />
            }
            valueComponentType="text"
          />
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              alignItems="center"
              alignSelf="center"
              data-blade-component="base-box"
              display="flex"
              flexDirection="row"
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <View
                alignItems="stretch"
                alignSelf="stretch"
                data-blade-component="base-box"
                display="flex"
                style={
                  [
                    {
                      "alignItems": "stretch",
                      "alignSelf": "stretch",
                      "display": "flex",
                      "paddingRight": 12,
                    },
                  ]
                }
              >
                <View
                  accessibilityLabel="Show password"
                  accessibilityRole="button"
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  emphasis="intense"
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignSelf": "center",
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    accessibilityElementsHidden={true}
                    align="xMidYMid"
                    bbHeight="16px"
                    bbWidth="16px"
                    data-blade-component="icon"
                    fill="none"
                    focusable={false}
                    height="16px"
                    importantForAccessibility="no-hide-descendants"
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        [
                          {},
                        ],
                        {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    vbHeight={24}
                    vbWidth={24}
                    width="16px"
                  >
                    <RNSVGGroup
                      fill={null}
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        clipRule={0}
                        d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                        fill={
                          {
                            "payload": 4285959847,
                            "type": 0,
                          }
                        }
                        fillRule={0}
                        propList={
                          [
                            "fill",
                            "fillRule",
                          ]
                        }
                      />
                      <RNSVGPath
                        clipRule={0}
                        d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                        fill={
                          {
                            "payload": 4285959847,
                            "type": 0,
                          }
                        }
                        fillRule={0}
                        propList={
                          [
                            "fill",
                            "fillRule",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
